--- a/pom.xml
+++ b/pom.xml
@@ -290,7 +290,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>top.chendaye666.StreamingJob</mainClass>
+                                    <mainClass>top.chendaye666.task.RewriteFileAction</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
