--- a/dwd/pom.xml
+++ b/dwd/pom.xml
@@ -17,6 +17,13 @@
     </properties>
 
     <dependencies>
+        <!-- 引入 common 封装 -->
+        <dependency>
+            <groupId>top.chendaye666</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Apache Flink dependencies -->
         <!-- These dependencies are provided, because they should not be packaged into the JAR file. -->
         <dependency>
