--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>dws</module>
         <module>ods</module>
         <module>task</module>
+        <module>kafkasource</module>
     </modules>
 
     <properties>
