--- a/task/pom.xml
+++ b/task/pom.xml
@@ -17,7 +17,7 @@
     </properties>
 
     <dependencies>
-        <!-- 引入 common 封装 -->
+        <!-- 引入 common 封装(要引用本地包，必须先 install) -->
         <dependency>
             <groupId>top.chendaye666</groupId>
             <artifactId>common</artifactId>
@@ -211,7 +211,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>top.chendaye666.task.RewriteFileAction</mainClass>
+                                    <mainClass>top.chendaye666.rewrite.RewriteFileAction</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
