因为iceberg 对spark 支持最友好，所以对于表的操作考虑使用spark 来完成，同时还可以复习spark的使用，一举多得

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ dwd/target/
 ods/target/
 dws/target/
 task/target/
+taskcompactsmallfile/target/
+taskexpiresnapshots/target/
+taskremoveorphanfiles/target/
+taskrewritemanifests/target/
 .idea/
