--- a/task/pom.xml
+++ b/task/pom.xml
@@ -101,7 +101,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 <!--                                    <mainClass>top.chendaye666.flink.RewriteFileAction</mainClass>-->
-                                    <mainClass>top.chendaye666.spark2.RewriteSmallFilesAction</mainClass>
+                                    <mainClass>top.chendaye666.spark2.CompactSmallFilesAction</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
