--- a/taskcompactsmallfile/pom.xml
+++ b/taskcompactsmallfile/pom.xml
@@ -77,7 +77,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>top.chendaye666.spark2.RewriteSmallFilesAction</mainClass>
+                                    <mainClass>top.chendaye666.spark2.CompactSmallFilesAction</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
