--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>taskexpiresnapshots</module>
         <module>taskremoveorphanfiles</module>
         <module>taskrewritemanifests</module>
+        <module>sparkicebergddl</module>
     </modules>
 
     <properties>
@@ -29,7 +30,8 @@
         <hadoop3.version>3.3.1</hadoop3.version>
         <hadoop2.version>2.7.1</hadoop2.version>
         <hadoop.cdh.version>3.0.0-cdh6.3.1</hadoop.cdh.version>
-        <scala.binary.version>2.11</scala.binary.version>
+        <scala.binary.version>2.12</scala.binary.version>
+<!--        <scala.binary.version>2.11</scala.binary.version>-->
         <iceberg11.version>0.11.1</iceberg11.version>
         <iceberg12.version>0.12.0</iceberg12.version>
         <hive.version>2.1.1</hive.version>
@@ -218,7 +220,7 @@
             <dependency>
                 <groupId>org.apache.iceberg</groupId>
                 <artifactId>iceberg-flink-runtime</artifactId>
-                <version>${iceberg11.version}</version>
+                <version>${iceberg12.version}</version>
             </dependency>
 
             <!-- kafka-->
@@ -273,6 +275,13 @@
                 <artifactId>junit-jupiter-params</artifactId>
                 <version>5.6.2</version>
                 <scope>test</scope>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.62</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
