--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,21 @@
     </modules>
 
     <properties>
+        <!--
+        有2组变量：
+            - Iceberg：0.11.1   0.12.0
+            - Scala： 2.11 2.22
+        -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!--                <flink.version>1.13.1</flink.version>-->
         <spark.varsion>2.4.0</spark.varsion>
-        <flink.version>1.11.2</flink.version>
+<!--        <flink.version>1.11.2</flink.version>-->
+        <flink.version>1.12.5</flink.version>
         <hadoop3.version>3.3.1</hadoop3.version>
         <hadoop2.version>2.7.1</hadoop2.version>
         <hadoop.cdh.version>3.0.0-cdh6.3.1</hadoop.cdh.version>
         <scala.binary.version>2.12</scala.binary.version>
-<!--        <scala.binary.version>2.11</scala.binary.version>-->
-        <iceberg11.version>0.11.1</iceberg11.version>
-        <iceberg12.version>0.12.0</iceberg12.version>
+        <!--0.11.1-->
+        <iceberg.version>0.12.0</iceberg.version>
         <hive.version>2.1.1</hive.version>
         <hive.cdh.version>2.1.1-cdh6.3.1</hive.cdh.version>
         <kafka.version>2.2.1</kafka.version>
@@ -75,7 +79,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
-                <artifactId>flink-table-api-scala_2.11</artifactId>
+                <artifactId>flink-table-api-scala_${scala.binary.version}</artifactId>
                 <version>${flink.version}</version>
             </dependency>
             <dependency>
@@ -220,7 +224,7 @@
             <dependency>
                 <groupId>org.apache.iceberg</groupId>
                 <artifactId>iceberg-flink-runtime</artifactId>
-                <version>${iceberg12.version}</version>
+                <version>${iceberg.version}</version>
             </dependency>
 
             <!-- kafka-->
