--- a/sparkicebergddl/pom.xml
+++ b/sparkicebergddl/pom.xml
@@ -43,12 +43,12 @@
         <dependency>
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-spark3</artifactId>
-            <version>${iceberg12.version}</version>
+            <version>${iceberg.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-spark3-runtime</artifactId>
-            <version>${iceberg12.version}</version>
+            <version>${iceberg.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -87,12 +87,12 @@
         <dependency>
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-flink-runtime</artifactId>
-            <version>${iceberg12.version}</version>
+            <version>${iceberg.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-core</artifactId>
-            <version>${iceberg12.version}</version>
+            <version>${iceberg.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
