--- a/task/pom.xml
+++ b/task/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-spark</artifactId>
-            <version>${iceberg11.version}</version>
+            <version>${iceberg.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
