--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,8 @@
             - Scala： 2.11 2.22
         -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spark.varsion>2.4.0</spark.varsion>
+<!--        <spark.varsion>2.4.0</spark.varsion>-->
+        <spark.varsion>3.1.2</spark.varsion>
 <!--        <flink.version>1.11.2</flink.version>-->
         <flink.version>1.12.5</flink.version>
         <hadoop3.version>3.3.1</hadoop3.version>
@@ -287,6 +288,14 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.62</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.68.Final</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
