--- a/sparkicebergddl/pom.xml
+++ b/sparkicebergddl/pom.xml
@@ -145,7 +145,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>top.chendaye666.spark2.CompactSmallFilesAction</mainClass>
+                                    <mainClass>top.chendaye666.java.maintenance.CompactSmallFile</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
