--- a/pom.xml
+++ b/pom.xml
@@ -30,24 +30,17 @@
             - Scala： 2.11 2.22
         -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!--        <spark.varsion>2.4.0</spark.varsion>-->
-        <spark.varsion>3.1.2</spark.varsion>
-        <!--        <flink.version>1.11.2</flink.version>-->
+        <spark.varsion>3.0.0</spark.varsion>
         <flink.version>1.12.5</flink.version>
-        <hadoop3.version>3.3.1</hadoop3.version>
-        <hadoop2.version>2.7.1</hadoop2.version>
-        <hadoop.cdh.version>3.0.0-cdh6.3.1</hadoop.cdh.version>
+        <hadoop3.version>3.1.3</hadoop3.version>
         <scala.binary.version>2.12</scala.binary.version>
-        <!--0.11.1-->
         <iceberg.version>0.12.0</iceberg.version>
-        <hive.version>2.1.1</hive.version>
+        <hive.version>3.1.2</hive.version>
         <hive.cdh.version>2.1.1-cdh6.3.1</hive.cdh.version>
-        <kafka.version>2.2.1</kafka.version>
-        <hbase.version>2.1.4</hbase.version>
+        <kafka.version>2.4.1</kafka.version>
+        <hbase.version>2.0.5</hbase.version>
         <elasticsearch.version>7.9.1</elasticsearch.version>
         <target.java.version>1.8</target.java.version>
-        <maven.compiler.source>${target.java.version}</maven.compiler.source>
-        <maven.compiler.target>${target.java.version}</maven.compiler.target>
         <log4j.version>1.7.22</log4j.version>
     </properties>
     <!--仓库配置-->
@@ -65,8 +58,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- Apache Flink dependencies -->
-            <!-- These dependencies are provided, because they should not be packaged into the JAR file. -->
             <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-java</artifactId>
@@ -180,55 +171,58 @@
             <dependency>
                 <groupId>org.apache.hive</groupId>
                 <artifactId>hive-exec</artifactId>
-                <version>${hive.cdh.version}</version>
+                <version>${hive.version}</version>
                 <!--            <scope>provided</scope>-->
             </dependency>
             <dependency>
                 <groupId>org.apache.hive</groupId>
                 <artifactId>hive-metastore</artifactId>
-                <version>${hive.cdh.version}</version>
+                <version>${hive.version}</version>
             </dependency>
 
             <!--Hadoop-->
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-common</artifactId>
-                <version>${hadoop.cdh.version}</version>
+                <version>${hadoop3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-hdfs</artifactId>
-                <version>${hadoop.cdh.version}</version>
+                <version>${hadoop3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-hdfs-client</artifactId>
-                <version>${hadoop.cdh.version}</version>
+                <version>${hadoop3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.11</version>
             </dependency>
             <!-- mapreduce -->
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-mapreduce-client-core</artifactId>
-                <version>${hadoop.cdh.version}</version>
+                <version>${hadoop3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-mapreduce-client-common</artifactId>
-                <version>${hadoop.cdh.version}</version>
+                <version>${hadoop3.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
-                <version>${hadoop.cdh.version}</version>
+                <version>${hadoop3.version}</version>
             </dependency>
-
             <!-- Iceberg -->
             <dependency>
                 <groupId>org.apache.iceberg</groupId>
                 <artifactId>iceberg-flink-runtime</artifactId>
                 <version>${iceberg.version}</version>
             </dependency>
-
             <!-- kafka-->
             <dependency>
                 <groupId>org.apache.flink</groupId>
@@ -257,7 +251,6 @@
                 <artifactId>avro</artifactId>
                 <version>1.9.2</version>
             </dependency>
-
             <!-- fastjson -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -282,28 +275,23 @@
                 <version>5.6.2</version>
                 <scope>test</scope>
             </dependency>
-
-
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.4</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.62</version>
             </dependency>
-
             <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>4.1.68.Final</version>
             </dependency>
-
-            <!-- https://mvnrepository.com/artifact/org.apache.phoenix/phoenix-core -->
-            <dependency>
-                <groupId>org.apache.phoenix</groupId>
-                <artifactId>phoenix-client-hbase-1.3</artifactId>
-                <version>4.3.0-clabs-phoenix-1.0.0</version>
-            </dependency>
-
             <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
             <dependency>
                 <groupId>org.slf4j</groupId>
